--- a/applications/album-service/build.gradle
+++ b/applications/album-service/build.gradle
@@ -1,6 +1,13 @@
 apply from: "../../java.gradle"
 
 apply plugin: "org.springframework.boot"
+apply plugin: "io.spring.dependency-management"
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+    }
+}
 
 group = "org.superbiz"
 version = "1.1.0-SNAPSHOT"
@@ -8,7 +15,8 @@ description = "OpenEJB :: Web Examples :: AlbumService"
 
 dependencies {
     compile project(":components:albums")
-
+    compile "org.springframework.cloud:spring-cloud-starter-oauth2"
+    compile "io.pivotal.spring.cloud:spring-cloud-sso-connector:$springCloudSsoVersion"
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
 
