--- a/applications/movie-fun-app/build.gradle
+++ b/applications/movie-fun-app/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-tomcat"
 
+    compile "io.pivotal.spring.cloud:spring-cloud-services-starter-config-client"
+
     compile "org.springframework.cloud:spring-cloud-starter-oauth2"
     compile "org.springframework.security:spring-security-taglibs:$springSecurityVersion"
 
