--- a/manifest.yml
+++ b/manifest.yml
@@ -6,9 +6,9 @@ services:
 - movie-fun-registry
 env:
   S3_ENDPOINTURL: http://s3.amazonaws.com
-  S3_ACCESSKEY: AKIAIYCO2YLAA7IPMAOQ
-  S3_SECRETKEY: 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
-  S3_BUCKETNAME: cf-3961f414-5b01-48bd-93a8-3f7cb00bb2a3
+  S3_ACCESSKEY: 
+  S3_SECRETKEY: 
+  S3_BUCKETNAME: 
 
 applications:
 - name: album-service
